@@ -95,6 +95,10 @@ AC_CHECK_MEMBER([krb5_creds.session],
     [RRA_INCLUDES_KRB5])
 RRA_LIB_KRB5_RESTORE
 RRA_LIB_REMCTL_OPTIONAL
+AS_IF([test x"$rra_use_remctl" = x"true"],
+    [RRA_LIB_REMCTL_SWITCH
+     AC_CHECK_FUNCS([remctl_set_ccache remctl_set_timeout])
+     RRA_LIB_REMCTL_RESTORE])
 RRA_LIB_SSL
 RRA_LIB_CURL
 AS_IF([test x"$build_webauthldap" = x"true"], [RRA_LIB_LDAP])
