@@ -5,6 +5,11 @@ WebAuth 4.0.3 (unreleased)
     Really fix compilation without remctl libraries.  The previous change
     would always define HAVE_REMCTL even if the libraries weren't found.
 
+    If the remctl_set_ccache function is available, use it instead of
+    setenv of KRB5CCNAME to set the ticket cache location when making user
+    information service calls.  This at least only affects thread state
+    instead of global process state.
+
     Fix error handling in WebLogin when the password field on the login
     form is left blank.  The correct error is now returned, leaving the
     user at the login page, rather than giving the user a generic error
